--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 cli.cpython-312.pyc
 brain_games.cpython-312.pyc
-brain_even.cpython-312.pyc
+/brain_games/scripts/__pycache__/brain_even.cpython-310.pyc
