--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ asciinema = "^2.4.0"
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.0"
