--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ asciinema = "^2.4.0"
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.games.brain_even:main"
 brain-calc = "brain_games.games.brain_calc:main"
+brain-gcd = "brain_games.games.brain_gcd:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.0"
