--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ brain-even = "brain_games.games.brain_even:main"
 brain-calc = "brain_games.games.brain_calc:main"
 brain-gcd = "brain_games.games.brain_gcd:main"
 brain-progression = "brain_games.games.brain_progression:main"
+brain-prime = "brain_games.games.brain_prime:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^7.1.0"
