add description to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Brain-Games - mental game"
 authors = ["Ilfat Shaydullin <sweden.fan@yandex.ru>"]
 readme = "README.md"
 
